objects/AsiaProductCatalog__c.object
<CustomObject>
    <fields>
        <fullName>AdditionalInformation__c</fullName>
        <formula>IF(AND(OR(NumberOfMounting__c == 0, NumberOfMounting__c == 1), NOT(LocalSupplyFlag__c)), &apos;&apos;, &apos;(&apos; + IF(NumberOfMounting__c != 0, TEXT(NumberOfMounting__c), &apos;&apos;) + IF(LocalSupplyFlag__c, &apos;L&apos;, &apos;&apos;) + &apos;)&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CatalogStructure__c</fullName>
        <label>Catalog Structure</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassificationLevel__c</fullName>
        <label>Classification Level</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClassificationNo__c</fullName>
        <label>Classification No</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassificationType__c</fullName>
        <label>Classification Type</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnglishText__c</fullName>
        <label>English Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalSupplyFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Local Supply Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelType__c</fullName>
        <label>Model Type</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NumberOfMounting__c</fullName>
        <label>Number of Mounting</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductCatalog__c</fullName>
        <label>Product Catalog</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Item</label>
        <referenceTo>ProductItem__c</referenceTo>
        <relationshipLabel>Asia Product Catalog</relationshipLabel>
        <relationshipName>AsiaProductCatalog_ProductItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductNo__c</fullName>
        <formula>ProductItem__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchKeyWord__c</fullName>
        <label>Search KeyWord</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SequenceNo__c</fullName>
        <label>Sequence No</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Asia Product Catalog</label>
    <listViews>
        <fullName>All</fullName>
        <columns>AdditionalInformation__c</columns>
        <columns>LocalSupplyFlag__c</columns>
        <columns>NumberOfMounting__c</columns>
        <columns>NAME</columns>
        <columns>ProductItem__c</columns>
        <columns>ModelType__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>Asia Product Catalog Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>